Added Editing and Deleting to Habit Dashboard. Added Sorting of Habits. Also added time reminder. Need to fix reminder logic.